--- a/main.css
+++ b/main.css
@@ -8,55 +8,36 @@ body {
   background: #671a68;
 }
 
+footer {
+  margin-top: 50px;
+}
+
+h1, h3 {
+  background: linear-gradient(to bottom, #E8D5AA 0%, #D6937A 100%);
+  background-clip: text;
+  color: transparent;
+}
+
 h1 {
   margin-top: 40px;
-  color: #f4d8f4;
   font-size: 48px;
 }
 
 h3 {
-  color: #dfb2e0;
   font-size: 24px;
 }
 
 p {
-  color: #d095d1;
+  color: #f4d8f4;
 }
 
 input {
   font-size: 18px;
 }
 
-#linkbtn {
-  margin: 40px 10px;
-  padding: 15px 30px;
-  text-align: center;
-  text-transform: uppercase;
-  transition: 0.5s;
-  background-size: 200% auto;
-  color: white;
-  border-radius: 10px;
-  display: inline-block;
-  border: 0px;
-  font-weight: 700;
-  box-shadow: 0px 0px 14px -7px #f09819;
-  background-image: linear-gradient(45deg, #FF512F 0%, #F09819  51%, #FF512F  100%);
-  cursor: pointer;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  visibility: collapse;
-  text-decoration: none;
-  font-size: 18px;
+#result {
+  color: #d33;
 }
-  #linkbtn:hover {
-    background-position: right center;
-    color: #fff;
-    text-decoration: none;
-  }
-  #linkbtn:active {
-    transform: scale(0.95);
-  }
 
 .update {
   color: #9dd195;
@@ -65,9 +46,5 @@ input {
 .highlight {
   font-weight: bold;
   color: #a4e49a;
-}
-
-.alert {
-  color: #d33;
 }
 
